--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                 </div>
                 <h4 data-lang-it>Automazione Industriale</h4>
                 <h4 data-lang-en style="display:none">Industrial Automation</h4>
-                <p data-lang-it">Implementiamo sistemi automatizzati per ottimizzare la produzione e ridurre i costi operativi.</p>
+                <p data-lang-it"style="display:none">Implementiamo sistemi automatizzati per ottimizzare la produzione e ridurre i costi operativi.</p>
                 <p data-lang-en style="display:none">We implement automated systems to optimize production and reduce operating costs.</p>
             </div>
             <div class="service-card scroll-reveal">
@@ -593,7 +593,7 @@
                 </div>
                 <h4 data-lang-it>Manutenzione e Supporto</h4>
                 <h4 data-lang-en style="display:none">Maintenance & Support</h4>
-                <p data-lang-it">Offriamo servizi di manutenzione preventiva e supporto tecnico per garantire la continuità operativa.</p>
+                <p data-lang-it"style="display:none">Offriamo servizi di manutenzione preventiva e supporto tecnico per garantire la continuità operativa.</p>
                 <p data-lang-en style="display:none">We offer preventive maintenance and technical support services to ensure operational continuity.</p>
             </div>
         </div>
@@ -627,7 +627,7 @@
     </section>
 
     <section id="privacy" class="section scroll-reveal">
-        <h3 data-lang-it>Privacy Policy</h3>
+        <h3 data-lang-it>Politica sulla riservatezza</h3>
         <h3 data-lang-en style="display:none">Privacy Policy</h3>
         <p data-lang-it>Questo sito non raccoglie direttamente dati personali degli utenti. Tuttavia, potrebbero essere presenti strumenti di terze parti (es. Google Fonts, hosting provider) che raccolgono dati in forma anonima per finalità tecniche.</p>
         <p data-lang-en style="display:none">This site does not directly collect users' personal data. However, third-party tools (e.g., Google Fonts, hosting providers) may collect anonymous technical data.</p>
