--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 display: block; /* Show hamburger on mobile */
             }
 
-            nav {
+            #desktopNavigation {
                 display: none; /* Hide desktop nav */
             }
 
@@ -815,27 +815,41 @@
             }
         }
 
-        /* Chi Siamo Section Graphic */
+        /* Chi Siamo Section Graphic - Corrected for readability */
         #chi-siamo {
             background-image: url('http://googleusercontent.com/image_generation_content/0'); /* Using the generated image URL */
             background-size: cover;
             background-position: center;
-            color: var(--bianco); /* Ensure text is readable */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Improve text visibility */
+            /* No direct color for text here, it will be handled by the overlay */
+            position: relative; /* Needed for the overlay */
+            overflow: hidden; /* To contain the pseudo-element */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
 
+        #chi-siamo::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(30, 58, 138, 0.7); /* Dark overlay for better text contrast */
+            z-index: 1; /* Place overlay below text */
+        }
+
         #chi-siamo h3,
         #chi-siamo p {
             text-align: center; /* Center text within the section */
+            color: var(--bianco); /* Ensure text is readable against the overlay */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Improve text visibility */
             padding: 1rem; /* Add padding for better spacing */
             max-width: 800px; /* Limit text width for readability */
             margin: 0 auto; /* Center the text block */
-            position: relative;
-            z-index: 2; /* Ensure text is above any potential background elements */
+            position: relative; /* Needed for the overlay */
+            z-index: 2; /* Ensure text is above overlay */
         }
     </style>
 </head>
